--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "stencil-starter-project-name",
-  "version": "0.0.1",
-  "description": "Stencil Component Starter",
+  "name": "stencil-slide-button",
+  "version": "1.0.0",
+  "description": "Stencil slide button component",
   "module": "dist/esm/index.js",
   "main": "dist/index.js",
   "unpkg": "dist/ionic.js",
