--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test.watch": "stencil test --spec --e2e --watchAll"
   },
   "dependencies": {
-    "@stencil/sass": "^0.1.1"
+    "@stencil/sass": "^0.1.1",
+    "ionic": "^4.12.0"
   },
   "devDependencies": {
     "@stencil/core": "~0.16.2",
