--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
   },
   "devDependencies": {
     "@stencil/core": "~0.16.2",
-    "@types/jest": "23.3.14",
     "@types/puppeteer": "1.12.3",
-    "jest": "23.6.0",
-    "jest-cli": "23.6.0",
-    "puppeteer": "1.8.0"
+    "jest-cli": "^24.8.0",
+    "puppeteer": "^1.17.0"
   },
   "license": "MIT"
 }
